--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-What's up world?
+<html>
+<head>
+	<title>Mike</title>
+</head>
+<body>
+	<div>
+		<span>What's up world?</span>
+	</div>
+</body>
+</html>
