--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<html>
-<head>
-	<title>Mike</title>
-</head>
-<body>
-	<div>
-		<span>What's up world?</span>
-	</div>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Portfolio</title>
+    </head>
+    <body>
+		<div>
+			<span>What's up world?</span>
+		</div>
+	</body>
 </html>
