--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-		<div>
+		<div id="header">
 			<span>What's up world?</span>
 		</div>
 	</body>
