--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</div>
 		<div id="work">
 			<div class="container">
-				<div></div>
+				<div><img src="images/wildthingThumb.png"></div>
 				<div></div>
 				<div></div>
 				<div></div>
