--- a/jacob/index.html
+++ b/jacob/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>My Portfolio</title>
+        <title>Jacob Shilling - Associate Media Planner at AKQA</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script type="text/javascript" src="js/skrollr.min.js"></script>
