added tweet link

--- a/jacob/index.html
+++ b/jacob/index.html
@@ -9,7 +9,7 @@
         <script type="text/javascript" src="js/simplr.js"></script>
     </head>
     <body>
-    	<a class="tweet-it" data-0="width:125px;opacity:1;" data-300="width:0;opacity:0.8;">Tweet @jshillin</a>
+    	<a href="https://twitter.com/intent/tweet?text=%40jshillin+%23J460" target="_blank" class="tweet-it" data-0="width:125px;opacity:1;" data-300="width:0;opacity:0.8;">Tweet @jshillin</a>
     	<div id="more-bg" data-1400-end="opacity: 0;" data-1399-end="opacity: 1;">
     	</div>
     	<div id="header">
