--- a/jacob/index.html
+++ b/jacob/index.html
@@ -130,6 +130,10 @@
 			</div>
 		</div>
 	<script type="text/javascript">
+	if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
+		 alert('youre on a phone');
+		}
+	else {
 		$(document).ready(function() {
             var s = skrollr.init();
 
@@ -151,7 +155,8 @@
             	$(this).removeClass('blip-icon');
             });
 
-        }); 
+        });
+	}
 	</script>
 	</body>
 </html>
