just about done

--- a/jacob/index.html
+++ b/jacob/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Jacob Shilling - Associate Media Planner at AKQA</title>
+        <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
         <link rel="stylesheet" type="text/css" href="style.css">
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script type="text/javascript" src="js/skrollr.min.js"></script>
@@ -10,7 +11,7 @@
     </head>
     <body>
     	<a href="https://twitter.com/intent/tweet?text=%40jshillin+%23J460" target="_blank" class="tweet-it" data-0="width:125px;opacity:1;" data-300="width:0;opacity:0.8;">Tweet @jshillin</a>
-    	<div id="more-bg" data-1400-end="opacity: 0;" data-1399-end="opacity: 1;">
+    	<div id="good-bg" data-anchor-target="#good" data-40-bottom-top="opacity: 0;" data-39-bottom-top="opacity: 1;">
     	</div>
     	<div id="header">
 			<div class="container">
@@ -110,17 +111,17 @@
 			</div>
 			<div class="container">
 				<div id="map" data-top-top="opacity:1;" data-top-bottom="opacity:0;">
-				<div class="blip sanf"></div>
-				<div class="blip pdx"></div>
-				<div class="blip atl"></div>
-				<div class="blip ny"></div>
-				<div class="blip wdc"></div>
-				<div class="blip lndn"></div>
-				<div class="blip paris"></div>
-				<div class="blip amstr"></div>
-				<div class="blip brln"></div>
-				<div class="blip shng"></div>
-				<div class="blip tokyo"></div>
+					<div class="blip sanf" data-anchor-target="#akqa" data-bottom-top="left:-999px;top:-300px;width:200px;height:200px;" data-bottom-bottom="left:143px;top:188px;width:9px;height:9px;"></div>
+					<div class="blip pdx"></div>
+					<div class="blip atl"></div>
+					<div class="blip ny"></div>
+					<div class="blip wdc"></div>
+					<div class="blip lndn"></div>
+					<div class="blip paris"></div>
+					<div class="blip amstr"></div>
+					<div class="blip brln"></div>
+					<div class="blip shng"></div>
+					<div class="blip tokyo"></div>
 				</div>
 			</div>
 		</div>
