--- a/jacob/index.html
+++ b/jacob/index.html
@@ -17,7 +17,9 @@
 			<div class="container">
 				<h1>Jacob Shilling</h1>
 				<h2>Associate Media Planner at AKQA</h2>
-				<div class="social-links"><a href="http://twitter.com/jshillin/"><img src="images/twitter.png" alt="twitter" /></a><a href="http://www.linkedin.com/in/jshillin"><img src="images/linkedin.png" alt="linkedin" /></a></div>
+				<div id="links">
+					<a href="http://twitter.com/jshillin/"><img src="images/twitter.png" alt="twitter" /></a><a href="http://www.linkedin.com/in/jshillin"><img src="images/linkedin.png" alt="linkedin" /></a>
+				</div>
 			</div>
 		</div>
 		<div id="bio" data-bottom-top="background-color:rgba(255,255,255,0)" data-top-top="background-color:rgba(255,255,255,1)">
