--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-    	<div id="header">
+    	<h1>Coming soon...<h1>
+    	<div><a href="http://cargocollective.com/mikehobizal/">Cargo</a></div>
+    	<!-- <div id="header">
 			<div class="container">
 				<span><h1>Mike Hobizal</h1></span>
 			</div>
@@ -25,6 +27,7 @@
 				<div></div>
 				<div></div>
 			</div>
-		</div>
+		</div> -->
+
 	</body>
 </html>
