--- a/jacob/index.html
+++ b/jacob/index.html
@@ -18,7 +18,8 @@
 				<h1>Jacob Shilling</h1>
 				<h2>Associate Media Planner at AKQA</h2>
 				<div id="links">
-					<a href="http://twitter.com/jshillin/"><img src="images/twitter.png" alt="twitter" /></a><a href="http://www.linkedin.com/in/jshillin"><img src="images/linkedin.png" alt="linkedin" /></a>
+					<a href="http://twitter.com/jshillin/"><img src="images/twitter.png" alt="twitter" /></a>
+					<a href="http://www.linkedin.com/in/jshillin"><img src="images/linkedin.png" alt="linkedin" /></a>
 				</div>
 			</div>
 		</div>
