--- a/jacob/index.html
+++ b/jacob/index.html
@@ -15,11 +15,11 @@
     	</div>
     	<div id="header">
 			<div class="container">
-				<h1>Jacob Shilling</h1>
+				<h1>Jacob Shilling<img src="images/linkedin.png" alt="linkedin" /></h1>
 				<h2>Associate Media Planner at AKQA</h2>
 				<div id="links">
 					<a href="http://twitter.com/jshillin/"><img src="images/twitter.png" alt="twitter" /></a>
-					<a href="http://www.linkedin.com/in/jshillin"><img src="images/linkedin.png" alt="linkedin" /></a>
+					<a href="http://www.linkedin.com/in/jshillin"></a>
 				</div>
 			</div>
 		</div>
