--- a/jacob/index.html
+++ b/jacob/index.html
@@ -15,11 +15,11 @@
     	</div>
     	<div id="header">
 			<div class="container">
-				<h1>Jacob Shilling<img src="images/linkedin.png" alt="linkedin" /></h1>
+				<h1>Jacob Shilling</h1>
 				<h2>Associate Media Planner at AKQA</h2>
 				<div id="links">
-					<a href="http://twitter.com/jshillin/"><img src="images/twitter.png" alt="twitter" /></a>
-					<a href="http://www.linkedin.com/in/jshillin"></a>
+					<a class="twt" href="http://twitter.com/jshillin/"></a>
+					<a class="ln" href="http://www.linkedin.com/in/jshillin"></a>
 				</div>
 			</div>
 		</div>
@@ -69,8 +69,8 @@
 			<div class="vertical-line"></div>
 				<div class="line" data-bottom-top="padding-top: 200px" data-center-top="padding-top:0;">
 					<div class="corp-box">
-						<h3>Allen Hall Advertising</h3>
-						<div class="company-image aha"></div>
+						<h3><a href="http://aha.uoregon.edu/">Allen Hall Advertising</a></h3>
+						<a href="http://aha.uoregon.edu/" class="company-image aha"></a>
 						<span>September 2009 - June 2010</span>
 					</div>
 					<div class="company-details">
@@ -79,8 +79,8 @@
 				</div>
 				<div class="line" data-bottom-top="padding-top: 200px" data-center-top="padding-top:0;">
 					<div class="corp-box">
-						<h3>Waggener Edstrom</h3>
-						<div class="company-image we"></div>
+						<h3><a href="http://waggeneredstrom.com/">Waggener Edstrom</a></h3>
+						<a href="http://waggeneredstrom.com/" class="company-image we"></a>
 						<span>February 2011 - May 2011</span>
 					</div>
 					<div class="company-details">
@@ -89,8 +89,8 @@
 				</div>
 				<div class="line" data-bottom-top="padding-top: 200px" data-center-top="padding-top:0;">
 					<div class="corp-box">
-						<h3>Razorfish Seattle</h3>
-						<div class="company-image rf"></div>
+						<h3><a href="http://razorfish.com/">Razorfish Seattle</a></h3>
+						<a href="http://razorfish.com/" class="company-image rf"></a>
 						<span>August 2011 - August 2012</span>
 					</div>
 					<div class="company-details">
@@ -99,8 +99,8 @@
 				</div>
 				<div class="line" data-bottom-top="padding-top: 200px" data-center-top="padding-top:0;">
 					<div class="corp-box">
-						<h3>Razorfish San Francisco</h3>
-						<div class="company-image rf"></div>
+						<h3><a href="http://razorfish.com/">Razorfish San Francisco</a></h3>
+						<a href="http://razorfish.com/" class="company-image rf"></a>
 						<span>August 2012 - July 2013</span>
 					</div>
 					<div class="company-details">
@@ -110,12 +110,13 @@
 			</div>
 		</div>
 		<div id="akqa">
-			<div class="container" id="akqa-inner">
+				<h1 data-bottom-center="opacity:0;" data-center-top="opacity:1;">AKQA</h1>
+			<div class="container" id="akqa-inner" data-bottom-center="opacity:0;" data-center-top="opacity:1;">
 				<p>AKQA is an ideas and innovation company that specializes in creating digital services and products. AKQA has offices in <a href="#nogo" id="lndn" class="city-hover">London</a>, <a href="#nogo" id="sanf" class="city-hover">San Francisco</a>, <a href="#nogo" id="ny" class="city-hover">New York</a>, <a href="#nogo" id="paris" class="city-hover">Paris</a>, <a href="#nogo" id="wdc" class="city-hover">Washington, D.C.</a>, <a href="#nogo" id="amstr" class="city-hover">Amsterdam</a>, <a href="#nogo" id="brln" class="city-hover">Berlin</a>, <a href="#nogo" id="shng" class="city-hover">Shanghai</a>, <a href="#nogo" id="tokyo" class="city-hover">Tokyo</a>, <a href="#nogo" id="atl" class="city-hover">Atlanta</a>, and <a href="#nogo" id="pdx" class="city-hover">Portland</a>, with 1,200 full time employees.</p>
 			</div>
 			<div class="container">
 				<div id="map" data-top-top="opacity:1;" data-top-bottom="opacity:0;">
-					<div class="blip sanf" data-anchor-target="#akqa" data-bottom-top="left:-999px;top:-300px;width:200px;height:200px;" data-bottom-bottom="left:143px;top:188px;width:9px;height:9px;"></div>
+					<div class="blip sanf" data-anchor-target="#akqa" data-center-top="left:-999px;top:-300px;width:200px;height:200px;" data-top-top="left:143px;top:188px;width:9px;height:9px;"></div>
 					<div class="blip pdx"></div>
 					<div class="blip atl"></div>
 					<div class="blip ny"></div>
@@ -131,11 +132,11 @@
 		</div>
 		<div id="good">
 			<div class="container">
-				<h1>Something to chew on</h1>
+				<h1>Something to chew on...</h1>
 				<div id="video">
 					<iframe width="640" height="360" src="http://www.youtube.com/embed/12PWq22E9CQ" frameborder="0" allowfullscreen></iframe>
 				</div>
-				<div id="vid-desc">Think about how this relates to media planning and be ready for Jacob on Friday.</div>
+				<div id="vid-desc">Think about this video in relation to media planning and paid media and be ready with some questions for Jacob on Friday.</div>
 			</div>
 		</div>
 	<script type="text/javascript">
