--- a/jacob/index.html
+++ b/jacob/index.html
@@ -135,6 +135,9 @@
 				<div id="video">
 					<iframe width="640" height="360" src="http://www.youtube.com/embed/12PWq22E9CQ" frameborder="0" allowfullscreen></iframe>
 				</div>
+				<div id="video-mobile">
+					<a href="http://www.youtube.com/watch?v=12PWq22E9CQ">Watch video.</a>
+				</div>
 				<div id="vid-desc">Think about this video in relation to media planning and paid media and be ready with some questions for Jacob on Friday.</div>
 			</div>
 		</div>
