--- a/adventure/test.html
+++ b/adventure/test.html
@@ -7,18 +7,29 @@
         <link rel="stylesheet" type="text/css" href="trip.css">
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script type="text/javascript" src="skrollr.min.js"></script>
-        <script type="text/javascript" src="trip.js"></script>
     </head>
     <body>
         <div id="page-container">
             <div id="scroll-position"></div>
-            <div style="height:780px;background: #333;"><h2 style="text-align:center;color: #fff;" class="fadeOut">Hello. Welcome to this test.</h2></div>
-            <div class="box" style="padding-top:40px;">
+            <div id="banner"><h2 class="fadeOut">Hello. Welcome to this test.</h2></div>
+            <div class="box">
                 <div id="thisthisthis" class="fadeIn">
                     <p>Let's have some large blocks of texts "slide in" and "fade in" at the same time.</p>
                 </div>
 
-                <div class="fadeIn">
+                <div class="fadeInSlide">
+                    <p>Lorem ipsum Eiusmod aliqua nulla ea nostrud exercitation proident dolor proident eu non sed. Lorem ipsum Excepteur irure dolor proident sunt ex laborum elit et. Lorem ipsum Eiusmod laborum do est nulla anim irure. In cillum et ex eiusmod irure nulla. Minim irure id adipisicing anim nostrud anim enim mollit sint. Sit reprehenderit incididunt deserunt in Excepteur laborum quis qui occaecat sed ea sit. Deserunt culpa dolore culpa ullamco ut exercitation reprehenderit enim. Lorem ipsum Eiusmod laborum do est nulla anim irure. In cillum et ex eiusmod irure nulla. Minim irure id adipisicing anim nostrud anim enim mollit sint. Sit reprehenderit incididunt deserunt in Excepteur laborum quis qui occaecat sed ea sit. Deserunt culpa dolore culpa ullamco ut exercitation reprehenderit enim.</p>
+                </div>
+                <div class="fadeInSlide">
+                    <p>Lorem ipsum Eiusmod aliqua nulla ea nostrud exercitation proident dolor proident eu non sed. Lorem ipsum Excepteur irure dolor proident sunt ex laborum elit et. Lorem ipsum Eiusmod laborum do est nulla anim irure. In cillum et ex eiusmod irure nulla. Minim irure id adipisicing anim nostrud anim enim mollit sint. Sit reprehenderit incididunt deserunt in Excepteur laborum quis qui occaecat sed ea sit. Deserunt culpa dolore culpa ullamco ut exercitation reprehenderit enim. Lorem ipsum Eiusmod laborum do est nulla anim irure. In cillum et ex eiusmod irure nulla. Minim irure id adipisicing anim nostrud anim enim mollit sint. Sit reprehenderit incididunt deserunt in Excepteur laborum quis qui occaecat sed ea sit. Deserunt culpa dolore culpa ullamco ut exercitation reprehenderit enim.</p>
+                </div>
+                <div class="fadeInSlide">
+                    <p>Lorem ipsum Eiusmod aliqua nulla ea nostrud exercitation proident dolor proident eu non sed. Lorem ipsum Excepteur irure dolor proident sunt ex laborum elit et. Lorem ipsum Eiusmod laborum do est nulla anim irure. In cillum et ex eiusmod irure nulla. Minim irure id adipisicing anim nostrud anim enim mollit sint. Sit reprehenderit incididunt deserunt in Excepteur laborum quis qui occaecat sed ea sit. Deserunt culpa dolore culpa ullamco ut exercitation reprehenderit enim. Lorem ipsum Eiusmod laborum do est nulla anim irure. In cillum et ex eiusmod irure nulla. Minim irure id adipisicing anim nostrud anim enim mollit sint. Sit reprehenderit incididunt deserunt in Excepteur laborum quis qui occaecat sed ea sit. Deserunt culpa dolore culpa ullamco ut exercitation reprehenderit enim.</p>
+                </div>
+                <div class="fadeInSlide">
+                    <p>Lorem ipsum Eiusmod aliqua nulla ea nostrud exercitation proident dolor proident eu non sed. Lorem ipsum Excepteur irure dolor proident sunt ex laborum elit et. Lorem ipsum Eiusmod laborum do est nulla anim irure. In cillum et ex eiusmod irure nulla. Minim irure id adipisicing anim nostrud anim enim mollit sint. Sit reprehenderit incididunt deserunt in Excepteur laborum quis qui occaecat sed ea sit. Deserunt culpa dolore culpa ullamco ut exercitation reprehenderit enim. Lorem ipsum Eiusmod laborum do est nulla anim irure. In cillum et ex eiusmod irure nulla. Minim irure id adipisicing anim nostrud anim enim mollit sint. Sit reprehenderit incididunt deserunt in Excepteur laborum quis qui occaecat sed ea sit. Deserunt culpa dolore culpa ullamco ut exercitation reprehenderit enim.</p>
+                </div>
+                <div class="fadeInSlide">
                     <p>Lorem ipsum Eiusmod aliqua nulla ea nostrud exercitation proident dolor proident eu non sed. Lorem ipsum Excepteur irure dolor proident sunt ex laborum elit et. Lorem ipsum Eiusmod laborum do est nulla anim irure. In cillum et ex eiusmod irure nulla. Minim irure id adipisicing anim nostrud anim enim mollit sint. Sit reprehenderit incididunt deserunt in Excepteur laborum quis qui occaecat sed ea sit. Deserunt culpa dolore culpa ullamco ut exercitation reprehenderit enim. Lorem ipsum Eiusmod laborum do est nulla anim irure. In cillum et ex eiusmod irure nulla. Minim irure id adipisicing anim nostrud anim enim mollit sint. Sit reprehenderit incididunt deserunt in Excepteur laborum quis qui occaecat sed ea sit. Deserunt culpa dolore culpa ullamco ut exercitation reprehenderit enim.</p>
                 </div>
 
@@ -26,9 +37,9 @@
                     <p>Lorem ipsum Eiusmod aliqua nulla ea nostrud exercitation proident dolor proident eu non sed. Lorem ipsum Excepteur irure dolor proident sunt ex laborum elit et. Lorem ipsum Eiusmod laborum do est nulla anim irure. In cillum et ex eiusmod irure nulla. Minim irure id adipisicing anim nostrud anim enim mollit sint. Sit reprehenderit incididunt deserunt in Excepteur laborum quis qui occaecat sed ea sit. Deserunt culpa dolore culpa ullamco ut exercitation reprehenderit enim. Lorem ipsum Eiusmod laborum do est nulla anim irure. In cillum et ex eiusmod irure nulla. Minim irure id adipisicing anim nostrud anim enim mollit sint. Sit reprehenderit incididunt deserunt in Excepteur laborum quis qui occaecat sed ea sit. Deserunt culpa dolore culpa ullamco ut exercitation reprehenderit enim.</p>
                 </div>
 
-                <!-- <div class="fadeInSlide">
+                <div class="fadeInSlide">
                     <img src="http://motherrussia.polyester.se/jquery/panview/mr-t.jpg" alt="mr. t" style="width:500px;" />
-                </div> -->
+                </div>
             </div>
             <div style="height:2000px;"></div>
             <div class="fadeIn">Lorem ipsum Eiusmod aliqua nulla ea nostrud exercitation proident dolor proident eu non sed. Lorem ipsum Excepteur irure dolor proident sunt ex laborum elit et. Lorem ipsum Eiusmod laborum do est nulla anim irure. In cillum et ex eiusmod irure nulla. Minim irure id adipisicing anim nostrud anim enim mollit sint. Sit reprehenderit incididunt deserunt in Excepteur laborum quis qui occaecat sed ea sit. Deserunt culpa dolore culpa ullamco ut exercitation reprehenderit enim. Lorem ipsum Eiusmod laborum do est nulla anim irure. In cillum et ex eiusmod irure nulla. Minim irure id adipisicing anim nostrud anim enim mollit sint. Sit reprehenderit incididunt deserunt in Excepteur laborum quis qui occaecat sed ea sit. Deserunt culpa dolore culpa ullamco ut exercitation reprehenderit enim.
@@ -43,8 +54,8 @@
             $('.fadeIn').attr('data-center-top','opacity:1;');
             $('.fadeIn').attr('data-bottom-top','opacity:0;');
 
-            $('.fadeOut').attr('data-top-top','opacity:1;');
-            $('.fadeOut').attr('data-bottom-bottom','opacity:0;');
+            $('.fadeOut').attr('data-300-top-top','opacity:1;');
+            $('.fadeOut').attr('data-top-top','opacity:0;');
 
             $('.slide').attr('data-bottom-bottom','top:100px;');
             $('.slide').attr('data-center-center','top:40px;');
@@ -54,24 +65,29 @@
 
             $('.fadeInSlide2').attr('data-center-bottom','opacity:0;');
             $('.fadeInSlide2').attr('data-center-top','opacity:1;');
-
-            var s = skrollr.init();      
         });        
-            var trip = new Trip([
-               { 
-                   sel : $('#thisthisthis'),
-                   content : 'This a box down here'
-               },
-               {
-                   sel : $('#ourLogoIsCool'),
-                   content : 'Our logo is cool'
-               }
-            ]);
 
-            $(document).ready(function() {
-                alert('started');
-                trip.start();
-            });
+
+            window.onload = function() {
+                skrollr.init({
+                forceHeight: false
+                });
+            }
+            // var trip = new Trip([
+            //    { 
+            //        sel : $('#thisthisthis'),
+            //        content : 'This a box down here'
+            //    },
+            //    {
+            //        sel : $('#ourLogoIsCool'),
+            //        content : 'Our logo is cool'
+            //    }
+            // ]);
+
+            // $(document).ready(function() {
+            //     alert('started');
+            //     trip.start();
+            // });
         </script>
 
 	</body>
