--- a/jacob/index.html
+++ b/jacob/index.html
@@ -109,7 +109,7 @@
 			</div>
 		</div>
 		<div id="akqa">
-				<h1 data-bottom-center="opacity:0;" data-center-top="opacity:1;">AKQA</h1>
+				<h1 data-bottom-center="opacity:0;" data-center-top="opacity:1;"><a href="http://www.akqa.com">AKQA</a></h1>
 			<div class="container" id="akqa-inner" data-bottom-center="opacity:0;" data-center-top="opacity:1;">
 				<p>AKQA is an ideas and innovation company that specializes in creating digital services and products. AKQA has offices in <a href="#nogo" id="lndn" class="city-hover">London</a>, <a href="#nogo" id="sanf" class="city-hover">San Francisco</a>, <a href="#nogo" id="ny" class="city-hover">New York</a>, <a href="#nogo" id="paris" class="city-hover">Paris</a>, <a href="#nogo" id="wdc" class="city-hover">Washington, D.C.</a>, <a href="#nogo" id="amstr" class="city-hover">Amsterdam</a>, <a href="#nogo" id="brln" class="city-hover">Berlin</a>, <a href="#nogo" id="shng" class="city-hover">Shanghai</a>, <a href="#nogo" id="tokyo" class="city-hover">Tokyo</a>, <a href="#nogo" id="atl" class="city-hover">Atlanta</a>, and <a href="#nogo" id="pdx" class="city-hover">Portland</a>, with 1,200 full time employees.</p>
 			</div>
