--- a/jacob/index.html
+++ b/jacob/index.html
@@ -28,7 +28,7 @@
 				</div>
 				<div>
 					<span>Name</span>
-					<p>Jacob Schilling</p>
+					<p>Jacob Shilling</p>
 				</div>
 				<div>
 					<span>Hometown</span>
@@ -49,8 +49,8 @@
 				<div>
 				<span>Past Experiences</span>
 					<p>Allen Hall Advertising, Eugene, OR</p>
-					<p>Wagner &amp; Edstrom, Portland, OR</p>
-					<p>Razor Fish, Seattle, WA</p>
+					<p>Waggener &amp; Edstrom, Portland, OR</p>
+					<p>Razorfish, Seattle, WA</p>
 				</div>
 				<div>
 				<span>Passionate About</span>
