--- a/index.html
+++ b/index.html
@@ -3,24 +3,22 @@
     <head>
         <meta charset="utf-8">
         <title>My Portfolio</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-    	<h1>Coming soon...<h1>
-    	<div><a href="http://cargocollective.com/mikehobizal/">Cargo</a></div>
-    	<!-- <div id="header">
+    	<div id="header">
 			<div class="container">
 				<span><h1>Mike Hobizal</h1></span>
 			</div>
 		</div>
-		<div id="short-bio">
+		<!-- <div id="short-bio">
 			<div class="container">
 				Lorem ipsum Laborum laboris est non tempor in pariatur. Lorem ipsum Deserunt do ex Duis sed minim ad pariatur aute enim consequat ut. Lorem ipsum Cupidatat incididunt qui officia sit in esse anim exercitation commodo proident dolore eiusmod. Lorem ipsum Sit dolor aute pariatur id laborum ex eiusmod incididunt Excepteur deserunt nulla.
 			</div>
 		</div>
 		<div id="work">
 			<div class="container">
-				<div><img src="images/wildthingThumb.png"></div>
+				<div></div>
 				<div></div>
 				<div></div>
 				<div></div>
