--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="utf-8">
         <title>My Portfolio</title>
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
     	<div id="header">
 			<div class="container">
-				<span><h1>Mike Hobizal</h1></span>
+				<h1>Mike Hobizal</h1>
 			</div>
 		</div>
 		<!-- <div id="short-bio">
@@ -26,6 +27,9 @@
 				<div></div>
 			</div>
 		</div> -->
-
+	<script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="//use.typekit.net/gvg0bbo.js"></script>
+	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	</body>
 </html>
