--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
 		</div> -->
 	<script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="//use.typekit.net/gvg0bbo.js"></script>
-	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    <script type="text/javascript" src="http://use.typekit.net/gvg0bbo.js"></script>
 	</body>
 </html>
