--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 				<h1>Mike Hobizal</h1>
 			</div>
 		</div>
+		test
 		<!-- <div id="short-bio">
 			<div class="container">
 				Lorem ipsum Laborum laboris est non tempor in pariatur. Lorem ipsum Deserunt do ex Duis sed minim ad pariatur aute enim consequat ut. Lorem ipsum Cupidatat incididunt qui officia sit in esse anim exercitation commodo proident dolore eiusmod. Lorem ipsum Sit dolor aute pariatur id laborum ex eiusmod incididunt Excepteur deserunt nulla.
