--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>My Portfolio</title>
+   		<script type="text/javascript" src="http://use.typekit.net/gvg0bbo.js"></script>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
@@ -10,9 +11,12 @@
     	<div id="header">
 			<div class="container">
 				<h1>Mike Hobizal</h1>
+				<h3>Interactive Designer</h3>
 			</div>
 		</div>
-		test
+		<div class="container">
+			test
+		</div>
 		<!-- <div id="short-bio">
 			<div class="container">
 				Lorem ipsum Laborum laboris est non tempor in pariatur. Lorem ipsum Deserunt do ex Duis sed minim ad pariatur aute enim consequat ut. Lorem ipsum Cupidatat incididunt qui officia sit in esse anim exercitation commodo proident dolore eiusmod. Lorem ipsum Sit dolor aute pariatur id laborum ex eiusmod incididunt Excepteur deserunt nulla.
@@ -30,6 +34,5 @@
 		</div> -->
 	<script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="http://use.typekit.net/gvg0bbo.js"></script>
 	</body>
 </html>
