--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>My Portfolio</title>
-   		<script type="text/javascript" src="http://use.typekit.net/gvg0bbo.js"></script>
+   		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
@@ -14,24 +14,61 @@
 				<h3>Interactive Designer</h3>
 			</div>
 		</div>
-		<div class="container">
-			test
-		</div>
-		<!-- <div id="short-bio">
-			<div class="container">
-				Lorem ipsum Laborum laboris est non tempor in pariatur. Lorem ipsum Deserunt do ex Duis sed minim ad pariatur aute enim consequat ut. Lorem ipsum Cupidatat incididunt qui officia sit in esse anim exercitation commodo proident dolore eiusmod. Lorem ipsum Sit dolor aute pariatur id laborum ex eiusmod incididunt Excepteur deserunt nulla.
-			</div>
-		</div>
 		<div id="work">
 			<div class="container">
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
-				<div></div>
+				<div class="row">
+			        <div class="col-xs-3">
+			        	<div class="box"></div>
+			        </div>
+			        <div class="col-xs-3">
+			        	<div class="box"></div>
+			        </div>
+			        <div class="col-xs-3">
+			        	<div class="box"></div>
+			        </div>
+			        <div class="col-xs-3">
+			        	<div class="box"></div>
+			        </div>
+			    </div>
+			    <div class="row">
+			        <div class="col-xs-3">
+			        	<div class="box"></div>
+			        </div>
+			        <div class="col-xs-3">
+			        	<div class="box"></div>
+			        </div>
+			        <div class="col-xs-3">
+			        	<div class="box"></div>
+			        </div>
+			        <div class="col-xs-3">
+			        	<div class="box"></div>
+			        </div>
+			    </div>
+			    <div class="row">
+			        <div class="col-xs-3">
+			        	<div class="box"></div>
+			        </div>
+			        <div class="col-xs-3">
+			        	<div class="box"></div>
+			        </div>
+			        <div class="col-xs-3">
+			        	<div class="box"></div>
+			        </div>
+			        <div class="col-xs-3">
+			        	<div class="box"></div>
+			        </div>
+			    </div>
 			</div>
-		</div> -->
+		</div>
+		<div id="about">
+			<div class="container">
+				<div class="row">
+			        <div class="col-md-4">this</div>
+			        <div class="col-md-4">that</div>
+			        <div class="col-md-4">.col-md-4</div>
+			     </div>
+			</div>
+		</div>
 	<script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 	</body>
